--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@inertiajs/react": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/vite": "^4.0.0",
+        "@types/aos": "^3.0.7",
         "@types/node": "^18.13.0",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
@@ -27,6 +28,8 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "aos": "^2.3.4",
+        "framer-motion": "^12.19.2",
         "react-icons": "^5.5.0"
     }
 }
